# tick-to-ohlcv

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs  main.rs
src/tick_to_ohlcv/: __init__.py  cli.py  core.py  csv_adapter.py  discovery.py  intervals.py  writers.py
tests/: test_cli.py  test_core.py  test_csv_adapter.py  test_discovery.py  test_intervals.py  test_writers.py
