[project]
name = "tick-to-ohlcv"
version = "0.1.0"
description = "Convert raw market trade ticks into OHLCV candles."
requires-python = ">=3.11"

[project.scripts]
tick-to-ohlcv = "tick_to_ohlcv.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
