[project]
name = "tick-to-ohlcv"
version = "0.1.0"
description = "Convert raw market trade ticks into OHLCV candles."
requires-python = ">=3.11"
keywords = ["ohlcv", "tick-data", "market-data", "trading", "parquet", "csv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
tick-to-ohlcv = "tick_to_ohlcv.cli:main"

[project.optional-dependencies]
parquet = ["pyarrow>=14"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
